--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Player Deals</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@2.24.0/dist/full.css" rel="stylesheet" type="text/css" />
+   
 </head>
 
 <body>
@@ -148,7 +149,7 @@
                         <div class="card-body p-5 mt-2">
                             <h2 class="text-center text-xl">Selected Five</h2>
                             <div class="overflow-x-auto mt-2">
-                                <table class="table w-full">
+                                <table class="table table-zebra w-full">
                                     <tbody id="selected-players">
                                     </tbody>
                                 </table>
@@ -163,14 +164,14 @@
                                 </label>
                                 <label class="label mt-2">
                                     <span class="label-text text-base text-white">Per Player:</span>
-                                    <input id="food-field" type="text" placeholder="Type here"
+                                    <input id="player-cost" type="text" placeholder="Type here"
                                         class="input input-bordered w-2/3 ml-8 mt-2" />
                                 </label>
                                 <button id="calculate-btn"
                                     class="px-3 py-2 text-center font-bold rounded-lg text-black bg-yellow-500 mt-4">Calculate</button>
                                 <label class="label mt-4">
                                     <span class="label-text text-base text-white">Player Expenses:</span>
-                                    <span>0</span>
+                                    <span id="player-expenses">0</span>
                                 </label>
                                 <label class="label">
                                     <span class="label-text text-base text-white">Manager:</span>
