--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <footer class="mt-10 mb-8 divide-white">
         <p class="text-center">Copyright @ 2022 All Rights Reserved.</p>
     </footer>
-
+    <script src="./js/utilities.js"></script>
     <script src="./js/app.js"></script>
 </body>
 
