--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             </div>
         </section>
     </main>
-    <hr class="border-x-2 border-white cursor-pointer sm:mt-20" />
+    <hr class="border-x-2 border-black sm:border-white cursor-pointer sm:mt-20" />
     <footer class="mt-6 sm:mt-10 mb-8">
         <p class="text-center">Copyright @ 2022 All Rights Reserved.</p>
     </footer>
