--- a/index.html
+++ b/index.html
@@ -176,36 +176,36 @@
                             <h2 class="text-center text-xl">Selected Five</h2>
                             <div class="overflow-x-auto mt-2">
                                 <table class="table table-zebra table-normal w-full">
-                                    <tbody id="selected-players" class="text-center">
+                                    <tbody id="selected-players" class="text-center text-black sm:text-white">
                                     </tbody>
                                 </table>
                             </div>
                         </div>
                     </div>
-                    <div class="card w-full bg-black text-primary-content mt-3">
+                    <div class="card w-full bg-black text-black sm:text-white mt-3">
                         <div class="card-body w-full p-5">
                             <div class="form-control w-full">
                                 <label class="label flex justify-center">
-                                    <span class="label-text text-xl text-white">Budget</span>
+                                    <span class="label-text text-xl">Budget</span>
                                 </label>
                                 <label class="label mt-2">
-                                    <span class="label-text text-base text-white">Per Player:</span>
+                                    <span class="label-text text-base">Per Player:</span>
                                     <input id="player-cost" type="text" placeholder="Type here"
                                         class="input input-bordered w-2/3 ml-8 mt-2" />
                                 </label>
                                 <button id="calculate-btn"
                                     class="px-3 py-2 text-center font-bold rounded-lg text-black bg-yellow-500 mt-4">Calculate</button>
                                 <label class="label mt-4">
-                                    <span class="label-text text-base text-white">Player Expenses:</span>
+                                    <span class="label-text text-base">Player Expenses:</span>
                                     <span>$<span id="player-expenses">0</span></span>
                                 </label>
                                 <label class="label">
-                                    <span class="label-text text-base text-white">Manager:</span>
+                                    <span class="label-text text-base">Manager:</span>
                                     <input id="manager-cost" type="text" placeholder="Type here"
                                         class="input input-bordered w-2/3 ml-3 mt-2" />
                                 </label>
                                 <label class="label">
-                                    <span class="label-text text-base text-white">Coach:</span>
+                                    <span class="label-text text-base">Coach:</span>
                                     <input id="coach-cost" type="text" placeholder="Type here"
                                         class="input input-bordered w-2/3 ml-3" />
                                 </label>
@@ -213,7 +213,7 @@
                                     class="px-3 py-2 text-center font-bold rounded-lg text-black bg-yellow-500 mt-4">Calculate
                                     Total</button>
                                 <label class="label mt-4">
-                                    <span class="label-text text-base text-white">Total:</span>
+                                    <span class="label-text text-base">Total:</span>
                                     <span>$<span id="total-all-cost">0</span></span>
                                 </label>
                             </div>
