--- a/index.html
+++ b/index.html
@@ -186,26 +186,26 @@
                         <div class="card-body w-full p-5">
                             <div class="form-control w-full">
                                 <label class="label flex justify-center">
-                                    <span class="label-text text-xl text-black sm:text-white">Budget</span>
+                                    <span class="label-text text-xl text-white">Budget</span>
                                 </label>
                                 <label class="label mt-2">
-                                    <span class="label-text text-base text-black sm:text-white">Per Player:</span>
+                                    <span class="label-text text-base text-white">Per Player:</span>
                                     <input id="player-cost" type="text" placeholder="Type here"
                                         class="input input-bordered w-2/3 ml-8 mt-2" />
                                 </label>
                                 <button id="calculate-btn"
                                     class="px-3 py-2 text-center font-bold rounded-lg text-black bg-yellow-500 mt-4">Calculate</button>
                                 <label class="label mt-4">
-                                    <span class="label-text text-base text-black sm:text-white">Player Expenses:</span>
+                                    <span class="label-text text-basetext-white">Player Expenses:</span>
                                     <span>$<span id="player-expenses">0</span></span>
                                 </label>
                                 <label class="label">
-                                    <span class="label-text text-base text-black sm:text-white">Manager:</span>
+                                    <span class="label-text text-base text-white">Manager:</span>
                                     <input id="manager-cost" type="text" placeholder="Type here"
                                         class="input input-bordered w-2/3 ml-3 mt-2" />
                                 </label>
                                 <label class="label">
-                                    <span class="label-text text-base text-black sm:text-white">Coach:</span>
+                                    <span class="label-text text-base text-white">Coach:</span>
                                     <input id="coach-cost" type="text" placeholder="Type here"
                                         class="input input-bordered w-2/3 ml-3" />
                                 </label>
