--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                                 </label>
                                 <button id="calculate-btn"
                                     class="px-3 py-2 text-center font-bold rounded-lg text-black bg-yellow-500 mt-4">Calculate</button>
-                                <label class="label mt-4">
+                                <label class="label mt-4 text-white">
                                     <span class="label-text text-basetext-white">Player Expenses:</span>
                                     <span>$<span id="player-expenses">0</span></span>
                                 </label>
@@ -214,7 +214,7 @@
                                     Total</button>
                                 <label class="label mt-4">
                                     <span class="label-text text-base text-white">Total:</span>
-                                    <span>$<span id="total-all-cost">0</span></span>
+                                    <span class="text-white">$<span id="total-all-cost">0</span></span>
                                 </label>
                             </div>
                         </div>
