--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
                                 </label>
                                 <button id="calculate-btn"
                                     class="px-3 py-2 text-center font-bold rounded-lg text-black bg-yellow-500 mt-4">Calculate</button>
-                                <label class="label mt-4 text-white">
-                                    <span class="label-text">Player Expenses:</span>
-                                    <span>$<span id="player-expenses">0</span></span>
+                                <label class="label mt-4">
+                                    <span class="label-text text-base text-white">Player Expenses:</span>
+                                    <span class="text-white">$<span id="player-expenses">0</span></span>
                                 </label>
                                 <label class="label">
                                     <span class="label-text text-base text-white">Manager:</span>
