--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                                 <label class="label mt-2">
                                     <span class="label-text text-base text-white">Per Player:</span>
                                     <input id="player-cost" type="text" placeholder="Type here"
-                                        class="input input-bordered w-2/3 ml-8 mt-2" />
+                                        class="input input-bordered sm:text-white w-2/3 ml-8 mt-2" />
                                 </label>
                                 <button id="calculate-btn"
                                     class="px-3 py-2 text-center font-bold rounded-lg text-black bg-yellow-500 mt-4">Calculate</button>
@@ -202,12 +202,12 @@
                                 <label class="label">
                                     <span class="label-text text-base text-white">Manager:</span>
                                     <input id="manager-cost" type="text" placeholder="Type here"
-                                        class="input input-bordered w-2/3 ml-3 mt-2" />
+                                        class="input input-bordered sm:text-white w-2/3 ml-3 mt-2" />
                                 </label>
                                 <label class="label">
                                     <span class="label-text text-base text-white">Coach:</span>
                                     <input id="coach-cost" type="text" placeholder="Type here"
-                                        class="input input-bordered w-2/3 ml-3" />
+                                        class="input input-bordered sm:text-white w-2/3 ml-3" />
                                 </label>
                                 <button id="calculate-total-btn"
                                     class="px-3 py-2 text-center font-bold rounded-lg text-black bg-yellow-500 mt-4">Calculate
