--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         <div class="card-body p-2 sm:p-5 mt-2">
                             <h2 class="text-center text-xl">Selected Five</h2>
                             <div class="overflow-x-auto mt-2">
-                                <table class="table table-zebra table-normal w-full">
+                                <table id="table-child" class="table table-zebra table-normal w-full">
                                     <tbody id="selected-players" class="text-center text-black sm:text-white">
                                     </tbody>
                                 </table>
